fix: 修复 个人信息模块 上传头像未进行覆盖原文件